# lidar_camera_fusion

./: CMakeLists.txt  README.md  package.xml
config/: camera_matrix.json
lidar_camera_fusion/: camera_calibration.py  image_publisher.py
src/: lidar_camera_merge.cpp  test_json.cpp
